Added id type to Identifiable